refactor(rdm-ui): 优化 ConsoleController 类
- 移除了未使用的文本区域监听器代码- 优化了 select 命令的处理逻辑
-简化了文本区域内容的追加方式
- 添加了作者注释